# glotus

./: .gitignore  Cargo.toml  README.md
assets/case_01_plane/shaders/: fs_0.frag
assets/case_02_cube/shaders/: fs.frag  vs.vert
assets/case_03_phong/shaders/: fs.frag  vs.vert
case_01_plane/: Cargo.toml
case_01_plane/assets/shaders/: vs_0.vert
case_01_plane/src/: main.rs
case_02_cube/: Cargo.toml
case_02_cube/assets/shaders/: fs.frag  vs.vert
case_02_cube/src/: main.rs
case_03_phong/: Cargo.toml
case_03_phong/assets/shaders/: fs.frag  vs.vert
case_03_phong/src/: main.rs
glotus/: Cargo.toml  build.rs
glotus/src/: app.rs  app_builder.rs  lib.rs  log_builder.rs  utils.rs
glotus/src/camera/: camera.rs  camera_operation.rs  mod.rs  projection_type.rs
glotus/src/entity/: entity.rs  entity_manager.rs  mod.rs
glotus/src/light/: mod.rs
glotus/src/material/: material.rs  material_manager.rs  mod.rs  uniform_value.rs
glotus/src/mesh/: mesh.rs  mesh_manager.rs  mod.rs  vertex.rs
glotus/src/shader/: glotus.glsl  mod.rs  shader.rs  shader_error.rs  shader_manager.rs
glotus/src/texture/: mod.rs  texture2d.rs  texture_error.rs  texture_manager.rs  texture_mode.rs
glotus/src/transform/: mod.rs  position.rs  rotation.rs  scale.rs  transform.rs
main/: Cargo.toml
main/src/: main.rs
shaders/: fs_0.fs  vs_0.vs
